src/main/java/com/example/sap_shop/error/ProductNotFoundException.java
package com.example.sap_shop.error;

public class ProductNotFoundException extends RuntimeException{
    public ProductNotFoundException(String message) {
        super(message);
    }
}
